day04/k8s_hsvc_statefulset/dov-bear.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dov-deploy
  labels:
    app: dov
    name: dov-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dov
      name: dov-po
  template:
    metadata:
      name: dov-po
      labels:
        app: dov
        name: dov-po
    spec:
      containers:
      - name: dov-container
        #image: chukmunnlee/go-dov-bear:v1
        image: ngch/cfdsa-fortune:1.0.0-alpha
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: dov-svc
  labels:
    app: dov
    name: dov-svc
spec:
  type: ClusterIP
  selector:
    app: dov
    name: dov-po
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: dov-hsvc
  labels:
    app: dov
    name: dov-hsvc
spec:
  clusterIP: None
  selector:
    app: dov
    name: dov-po
  ports:
  - port: 3000
    targetPort: 3000
